--- a/Estructuras.ipynb
+++ b/Estructuras.ipynb
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def matematicas(a, b):\n",
+    "def matematicas(a, b): # Define la función\n",
     "    def suma(a, b):\n",
     "        print(a + b)\n",
     "\n",
@@ -104,7 +104,7 @@
     "    suma(a, b)\n",
     "    resta(a, b)\n",
     "\n",
-    "matematicas(8, 4)"
+    "matematicas(8, 4) # Invoca la función"
    ]
   },
   {
